# wikilens

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  gotchas.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: p10-plan.md  p11-plan.md  p12-plan.md  p2-decisions.md  p2-plan.md  p3-decisions.md  p4-decisions.md  p4-sdd.md  p5-decisions.md  p5-matcher-notes.md  p5-plan.md  p6-decisions.md  p6-judge-notes.md  p6-plan.md  p8-decisions.md  p8-plan.md
fixtures/audit_vault/: README.md  asteroids.md  drifter.md  ideas-overview.md  isolated-dwarf.md  jupiter.md  lonely-rock.md  mars.md  mercury.md  moons.md  saturn.md  solo-comet.md  telescopes.md  venus.md
fixtures/audit_vault/journal/: ideas.md
fixtures/audit_vault/notes/: ideas.md
fixtures/concepts_vault/: ant-colony-behavior.md  bounded-rationality.md  chunking-information.md  good-enough-decisions.md  habit-accumulation.md  interest-on-interest.md  mental-effort-and-task-complexity.md  resource-scarcity-and-choice.md  threshold-based-choice.md  time-allocation-tradeoffs.md  traffic-jam-formation.md  working-memory-limits.md
fixtures/confidence_vault/: astronomy.md  bicycle-maintenance.md  birdwatching.md  chess-openings.md  coffee-brewing.md  geology-plate-tectonics.md  guitar-tuning.md  home-gardening.md  knot-tying.md  meditation-practice.md  photography-exposure.md  roman-history.md  rust-ownership.md  sourdough-baking.md  woodworking-joints.md
fixtures/contradictions_vault/astronomy/: solar-system-old.md  solar-system.md
fixtures/contradictions_vault/biology/: cell-division-draft.md  cell-division.md
fixtures/contradictions_vault/capitals/: europe-capitals-wrong.md  (+1 more)
fixtures/drift_vault/: biology.md  chemistry.md  cooking.md  history.md  music.md  philosophy.md  physics.md  programming.md
fixtures/eval/: p10_ground_truth.json  p2_queries.jsonl  p3_ground_truth.json  p4_ground_truth.json  p5_ground_truth.json  p6_answer_sketches.json  p6_input_gaps.json  p8_ground_truth.json  p9_ground_truth.json
fixtures/sample_vault/: README.md  acids-and-bases.md  atoms.md  bread.md  cells.md  cellular-respiration.md  chemical-bonds.md  dna.md  emulsions.md  epistemology.md  ethics.md  fermentation.md  free-will.md  gravity.md  industrial-revolution.md  knife-skills.md  light.md  mind-body-problem.md  mitochondria.md  photosynthesis.md  printing-press.md  quantum-mechanics.md  relativity.md  roman-empire.md  scientific-method.md  silk-road.md  stock.md  stoicism.md  systems-thinking.md  thermodynamics.md  water.md  writing-well.md
scripts/: build_drift_fixture.py  check_sanitization.py  eval_p10.py  eval_p2.py  eval_p3.py  eval_p4.py  eval_p5.py  eval_p6.py  eval_p8.py  eval_p9.py  install_hooks.sh
src/wikilens/: __init__.py  _env.py  answer.py  answer_format.py  audit.py  audit_format.py  cli.py  concept_judge.py  concepts.py  confidence.py  confidence_format.py  confidence_judge.py  contradict.py  contradict_format.py  drafter.py  drift.py  drift_format.py  drift_judge.py  embed.py  gap.py  gap_format.py  generator.py  ingest.py  judge.py  matcher.py  pipeline.py  query.py  rerank.py  store.py
tests/: test_answer.py  test_answer_cli.py  test_answer_format.py  test_audit.py  test_audit_cli.py  test_cli_drift.py  test_concepts.py  test_confidence.py  test_contradict.py  test_contradict_cli.py  test_contradict_format.py  test_drafter.py  test_drift_format.py  test_drift_git.py  test_drift_judge.py  test_embed.py  test_gap.py  test_gap_cli.py  test_gap_format.py  test_generator.py  test_ingest.py  test_judge.py  test_matcher.py  test_pipeline.py  test_query.py  test_smoke.py  test_store.py
(+28 files in other folders)
