[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikilens"
version = "0.2.0"
description = "Agentic intelligence layer for Markdown/Obsidian vaults — RAG + evaluated metacognitive agents."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Boris Manzov", email = "borismanzov@outlook.com" },
]
keywords = [
    "obsidian",
    "markdown",
    "rag",
    "agents",
    "knowledge-management",
    "second-brain",
    "llm",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "lancedb==0.30.2",
    "sentence-transformers>=3.0,<5.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Universe8888/wikilens"
Repository = "https://github.com/Universe8888/wikilens"
Issues = "https://github.com/Universe8888/wikilens/issues"

[project.scripts]
wikilens = "wikilens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wikilens"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
